Added matching and other partials
Added new test partials, fixing earlier duplicate issue

Cleaned up files and directories for js and partials

Known issues:
- fuck.html is a really bad name for other catagory
- fuck view is non-functional and contains "Screw this! (╯°□°）╯︵ ┻━┻) ᕙ༼ຈل͜ຈ༽ᕗ" for some reason

--- a/framework/public/partials/fuck.html
+++ b/framework/public/partials/fuck.html
@@ -6,8 +6,8 @@
           <div class="large-3 columns">
             <center>
               <h4>Question Type</h4>
-            </center> 
-            <select class="question-type"> 
+            </center>
+            <select class="question-type">
               <option value="mtpl">Multiple Choice</option>
               <option value="shrt" selected>Short Answer</option>
               <option value="mtch">Matching</option>
@@ -33,7 +33,7 @@
                 <div class="row collapse">
                   <div class="small-2 columns"><span class="prefix">Answer:</span></div>
                   <div class="small-10 columns">
-                    <input name="answer" type="text" placeholder="e.g. Very Small... (Seperate Multiple Answers with Commas)">
+                    <h1>Screw this!<br><br>(╯°□°）╯︵ ┻━┻)<br><br>ᕙ༼ຈل͜ຈ༽ᕗ</h1>
                   </div>
                 </div>
               </div>
