--- a/framework/views/backbone.jade
+++ b/framework/views/backbone.jade
@@ -21,7 +21,7 @@ html(ng-app='ngAddApp', lang='en')
     script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/foundation.min.js')
     script(src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML")
 
-    script(src='questions.js', deferred='')
-    script(src='button.js', deferred='')
+    script(src='js/questions.js', deferred='')
+    script(src='js/button.js', deferred='')
     scritp(src='teacherTestSubmission.js')
     script($(document).foundation();)
