Continued work on linking database

--- a/framework/public/partials/multipleChoice.html
+++ b/framework/public/partials/multipleChoice.html
@@ -7,11 +7,11 @@
                         <center>
                             <h4>Question Type</h4>
                         </center>
-                        <select form="newtestCreation" name="questionChoice" class="question-type">
+                        <select form="newtestCreation" name="questionType" class="question-type">
                             <option value="mtpl">Multiple Choice</option>
                             <option value="shrt">Short Answer</option>
                             <option value="mtch">Matching</option>
-                            <option value="fuck">Other</option>
+                            <option value="othr">Other</option>
                         </select>
                     </div>
                     <div class="large-7 columns">
