--- a/framework/public/partials/othr.html
+++ b/framework/public/partials/othr.html
@@ -9,9 +9,9 @@
             </center>
             <select class="question-type">
               <option value="mtpl">Multiple Choice</option>
-              <option value="shrt" selected>Short Answer</option>
+              <option value="shrt">Short Answer</option>
               <option value="mtch">Matching</option>
-              <option value="othr">Other</option>
+              <option value="othr" selected>Other</option>
             </select>
           </div>
           <div class="large-7 columns">
