--- a/framework/public/partials/shortAnswer.html
+++ b/framework/public/partials/shortAnswer.html
@@ -7,7 +7,7 @@
             <center>
               <h4>Question Type</h4>
             </center>
-            <select class="question-type">
+            <select form="newtestCreation" name="questionType" class="question-type">
               <option value="mtpl">Multiple Choice</option>
               <option value="shrt" selected>Short Answer</option>
               <option value="mtch">Matching</option>
