Different (cleaner) method to send data to server
Contrary to popular believe AHEM kevin, using app.post with forms does
not "look" bad is less shady then document.getElementByName although i
agree they are very similar :D

works though :satisfied:

--- a/framework/views/newtest.jade
+++ b/framework/views/newtest.jade
@@ -39,7 +39,7 @@ block pageContent
 		.large-12.columns
 			.panel
 				script(src="js/newtest.js")
-				form(action='/newtest' method='post' onsubmit='return sendQuestionsToServer()' id = "newtestCreation")
+				form(action='/newtest' method='post' id = "newtestCreation")
 					div(ng-repeat='question in questions')
 						.form-group
 							.row
