Minor bug fixes and modals
Fixed some spellings in code

Worked on parts of the reveal mdoals since it stopped working

--- a/framework/views/backbone.jade
+++ b/framework/views/backbone.jade
@@ -23,5 +23,5 @@ html(ng-app='ngAddApp', lang='en')
 
     script(src='js/questions.js', deferred='')
     script(src='js/button.js', deferred='')
-    scritp(src='teacherTestSubmission.js')
+    script(src='teacherTestSubmission.js')
     script($(document).foundation();)
