--- a/framework/views/layout.jade
+++ b/framework/views/layout.jade
@@ -17,7 +17,7 @@ block bodyContent
           ul.right
             block rightBar
             li.has-dropdown
-              a(href='#') Login/Logout
+              a(href='#') Logout
               ul.dropdown
                 li
                   a(href='#') First link in dropdown
