--- a/framework/views/newtest.jade
+++ b/framework/views/newtest.jade
@@ -8,7 +8,7 @@ block rightBar
   li.divider(style='padding-left:5px;padding-right:5px;background:#333333;border-right:0px')
   li.active
     a.medium.radius.button(href='#', data-reveal-id='firstModal' style='top:5.5px;') View All Tests
-  #firstModal.reveal-modal(style='position: absolute; float: left;', data-reveal='data-reveal')
+  #firstModal.reveal-modal(style='position: absolute; float: left;', data-reveal)
     .row
       .large-12.columns
         h2 View All Tests
