--- a/framework/public/css/custom.css
+++ b/framework/public/css/custom.css
@@ -64,4 +64,24 @@ input[type="submit"] {
   background-color: #61B359;
   border-color: #007095;
   color: white;
-  border-radius: 3px; }
+  border-radius: 3px;
+  width: 100%; }
+
+li.btnSpacer {
+  padding-left: 5px;
+  padding-right: 5px;
+  background: #333;
+  border-right: 0px; }
+
+a.navBtn {
+  top: 5.5px; }
+
+#firstModal.reveal-modal {
+  position: absolute;
+  float: left; }
+
+h1.title {
+  padding-top: 40px; }
+
+.space {
+  padding: 20px; }
