fix some indents, add hidden field to shortanswer
the hidden field is needed based on the implementation of app.js

--- a/framework/public/partials/shortAnswer.html
+++ b/framework/public/partials/shortAnswer.html
@@ -39,6 +39,11 @@
 							</div>
 						</div>
 					</div>
+					<div style="display:none">
+						<select form="newtestCreation" name="amtAnswers">
+							<option value="1" selected></option>
+						</select>
+					</div>
 					<div class="large-2 columns">
 						<div class="row">
 							<div class="large-12 columns"><a>
