--- a/framework/views/newtest.jade
+++ b/framework/views/newtest.jade
@@ -43,7 +43,7 @@ block pageContent
 				//input(type = "text" placeholder = "Test Points" name="testPoints")
 				//input(type = "text" id="datepicker" name="dateTest")
 				//input(type="radio" name="randomTestQuestions")
-				input(type="text" placeholder="Test Name" name="testName")
+				//- input(type="text" placeholder="Test Name" name="testName")
 					div(ng-repeat='question in questions')
 						.form-group
 							.row
