--- a/framework/views/newtest.jade
+++ b/framework/views/newtest.jade
@@ -40,10 +40,10 @@ block pageContent
 			script(src="js/newtest.js")
 			form(action='/newtest' method='post' id = "newtestCreation")
 				.panel
-				//input(type = "text" placeholder = "Test Points" name="testPoints")
-				//input(type = "text" id="datepicker" name="dateTest")
-				//input(type="radio" name="randomTestQuestions")
-				//- input(type="text" placeholder="Test Name" name="testName")
+					input(type = "text" placeholder = "Test Points" name="testPoints")
+					input(type = "text" id="datepicker" name="dateTest")
+					input(type="radio" name="randomTestQuestions")
+					input(type="text" placeholder="Test Name" name="testName")
 					div(ng-repeat='question in questions')
 						.form-group
 							.row
