Changes number of answers
Each question can now have more questions

Known issues:
- Number of answers dropdwn doesn't work

--- a/framework/views/backbone.jade
+++ b/framework/views/backbone.jade
@@ -11,7 +11,7 @@ html(ng-app='ngAddApp', lang='en')
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 		link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/css/foundation.css')
 		link(rel='stylesheet', href='css/custom.css')
-		link(href='http://fonts.googleapis.com/css?family=Open+Sans:400,100,600', rel='stylesheet', type='text/css')
+		link(href='//fonts.googleapis.com/css?family=Open+Sans:400,100,600', rel='stylesheet', type='text/css')
 		link(rel='icon', type='image/png', href='/img/favicon.png')
 	body(ng-controller='MainCtrl')
 		block bodyContent
@@ -19,11 +19,10 @@ html(ng-app='ngAddApp', lang='en')
 		script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/modernizr.js')
 		script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/jquery.js')
 		script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/foundation.min.js')
-		script(src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML")
+		script(src='//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML')
 
 		script(src='js/questions.js')
 		script(src='js/button.js')
-		//- script(src='teacherTestSubmission.js')
+		// script(src='teacherTestSubmission.js')
 		script
 			$(document).foundation();
-</script>
