--- a/framework/views/backbone.jade
+++ b/framework/views/backbone.jade
@@ -18,11 +18,12 @@ html(ng-app='ngAddApp', lang='en')
 		script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular.min.js')
 		script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/modernizr.js')
 		script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/jquery.js')
+		script(src='//code.jquery.com/ui/1.11.0/jquery-ui.min.js')
 		script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/foundation.min.js')
-		script(src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML")
-
+		script(src='http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML')
 		script(src='js/questions.js')
 		script(src='js/button.js')
+		script(src='js/newtest.js')
 		//- script(src='teacherTestSubmission.js')
 		script
 			$(document).foundation();
