--- a/framework/views/newtest.jade
+++ b/framework/views/newtest.jade
@@ -39,15 +39,15 @@ block pageContent
 		.large-12.columns
 			form(action='/newtest' method='post' id = "newtestCreation")
 				.panel
-					input(type="text" placeholder="Test Name" name="testName")
-<<<<<<< HEAD
-					input(type = "text" id="datepicker" name="dateTest" placeholder="Date of Test")
-					input(type = "text" placeholder = "Test Points" name="testPoints")
+					.row
+						.large-8.columns
+							input(type="text" placeholder="Test Name" name="testName")
+						.large-2.columns
+							input(type = "text" id="datepicker" name="dateTest" placeholder="Date of Test")
+						.large-2.columns
+							input(type = "text" placeholder = "Test Points" name="testPoints")		
 					input(type="radio" name="RandomizeTestQuestions")
-					input(type="text" placeholder="Time to take Test" name="testTime")
-=======
-					input(type="text" placeholder="Test Date" name="testDate")
->>>>>>> FETCH_HEAD
+					input(type="datetime-local" name="datetimeTest")
 					div(ng-repeat='question in questions')
 						.form-group
 							.row
