Revert "Merge branch 'master' of https://github.com/justinyangusa/angelhack"
This reverts commit 1df80238001a6478f41225d75c7d1ab5b831b6d5, reversing
changes made to 59b6d4ce8a37f2a3845d7f4c73d7ef76c8711439.

Conflicts:
	framework/app.js

--- a/framework/views/newtest.jade
+++ b/framework/views/newtest.jade
@@ -79,7 +79,7 @@ block pageContent
 														.small-2.columns
 															br
 															center
-																h6 Number of Answer Choices
+																h6 # Answer Choices
 															select(form='newtestCreation' name='amtAnswers')
 																option(value='2') 2
 																option(value='3') 3
@@ -115,7 +115,7 @@ block pageContent
 														.small-5.columns
 															span.prefix Worth
 														.small-4.columns
-															input(name='points' type='number', placeholder='Question weight')
+															input(name='points' type='number', placeholder='')
 														.small-3.columns
 															span.postfix Pts.
 						br
