--- a/framework/views/newtest.jade
+++ b/framework/views/newtest.jade
@@ -47,23 +47,40 @@ block pageContent
 						.large-2.columns
 							input(type="text" placeholder="Test Points" name="testPoints")
 					.row
-						input(id="yoloswag420blazeit" name='RandomizedTestQuestions' type='checkbox')
-						input(id="checkbox1" name='randomnized' type='checkbox')
-						label(for='random') Randomize?
+						.large-10.columns
+							br
+						.large-2.columns
+							input(id="yoloswag420blazeit" name='RandomizedTestQuestions' type='checkbox' style='float:left;')
+							label(for='random') Randomize?
 					div(ng-repeat='question in questions')
 						.form-group
 							.row
 								.callout.panel
 									.row
+										a
+											h4(stlye='float:right;', align='right')
+												font(color='F21111') &times;	
 										.large-3.columns
 											center
 												h4 Question Type
-											select.question-type(form='newtestCreation' name='questionType')
-												option(value='mtpl') Multiple Choice
-												option(value='shrt') Short Answer
-												option(value='mtch') Matching
-												option(value='othr') Other
-										.large-7.columns
+											.row
+												.large-12.columns
+													select.question-type(form='newtestCreation' name='questionType')
+														option(value='mtpl') Multiple Choice
+														option(value='shrt') Short Answer
+														option(value='mtch') Matching
+														option(value='othr') Other
+												br
+												br
+												.large-3.columns
+													span.prefix Worth
+												.large-6.columns
+													input(name='points' type='number', placeholder='Points...')
+												.large-3.columns
+													span.postfix Pts.
+										.large-1.columns
+											br
+										.large-8.columns
 											center
 												h4 Question Info
 											.row
@@ -74,50 +91,38 @@ block pageContent
 														.small-10.columns
 															input.form-control.medform(name='question' type='text', placeholder='e.g. How big is China?', ng-model='item.text')
 											.row
-												.large-12.columns
-													.row.collapse
-														.small-2.columns
-															br
-															center
-																h6 Number of Answer Choices
-															select(form='newtestCreation' name='amtAnswers')
-																option(value='2') 2
-																option(value='3') 3
-																option(value='4') 4
-																option(value='5') 5
-															center
-																h6 Correct Answer
-																	select(form='newtestCreation' name='correctAnswer')
-																		.form-group
-																			option(value='a') A
-														.small-9.columns
-															div(ng-repeat='answer in answers')
-																.row
-																	.large-12.columns
-																		.row.collapse
-																			.small-2.columns
-																				span.prefix A
-																			.small-10.columns
-																				input(type='text', name='answer', placeholder='Enter answer choice')
-														a.medium.radius.button(ng-click='newAnswer()') Add Answer
-											a
-												h4(stlye='float:right;', align='right')
-													font(color='F21111') &times;
-											.row
 												br
-												br
-												.large-12.columns
+												.large-3.columns
+
 													center
-														input(id='checkbox1' name='randomnized' type='checkbox')
+														h6 Number of Answer Choices
+													select(form='newtestCreation' name='amtAnswers')
+														option(value='2') 2
+														option(value='3') 3
+														option(value='4') 4
+														option(value='5') 5
+													center
+														h6 Correct Answer
+															select(form='newtestCreation' name='correctAnswer')
+																.form-group
+																	option(value='a') A
+												.large-9.columns
+													div(ng-repeat='answer in answers')
+														.row
+															.large-12.columns
+																.row.collapse
+																	.small-2.columns
+																		span.prefix A
+																	.small-10.columns
+																		input(type='text', name='answer', placeholder='Enter answer choice')
+													center
+														a.small.radius.button(ng-click='newAnswer()') Add Answer
+											.row
+												//-.large-6.columns
+													center
+														input(id='checkbox1' name='randomnized' type='checkbox' style="padding-top:10px;")
 														label(for='random') Randomize?
-												.large-12.columns
-													.row.collapse
-														.small-5.columns
-															span.prefix Worth
-														.small-4.columns
-															input(name='points' type='number', placeholder='Question weight')
-														.small-3.columns
-															span.postfix Pts.
+											
 						br
 					center
 						a.medium.radius.button(ng-click='newQuestion()') Add Question
