Late Night Commits
More changes to SErver

--- a/framework/views/index.jade
+++ b/framework/views/index.jade
@@ -2,13 +2,13 @@ extends backbone
 block bodyContent
 	block pageTitle
 		.jumbotron
-			h1= eTest
+			h1 XAMulator
 	block pageContent
 		br
 		br
 		.row
 			.large-12.columns
-				h1 eTest Teacher's Portal
+				h1 XAMulator Portal
 				br
 		.row
 			.large-12.columns
