--- a/framework/views/newtest.jade
+++ b/framework/views/newtest.jade
@@ -26,23 +26,29 @@ block rightBar
 							img(data-caption='File 3', src='img/folderpic.jpg')
 		a.close-reveal-modal &times;
 
+br
+br
+br
+
 block pageContent
 	.row
 		.large-12.columns
 			h1.title Dashboard
+		br
 	.row
 		.large-12.columns
 			form(action='/newtest' method='post' id = "newtestCreation")
 				.panel
 					.row
-						.large-7.columns
-							input(type="text" placeholder="Test Name" name="testName")
-						.large-3.columns
-							input(type="datetime-local" name="datetimeTest")
+						.large-8.columns
+							input(type = "text" placeholder="Test Name" name="testName")
+						.large-2.columns
+							input(type = "text" id="datepicker" name="dateTest" placeholder="Date of Test")
 						.large-2.columns
 							input(type = "text" placeholder = "Test Points" name="testPoints")		
-					
-					div(ng-repeat='question in questions' class="question-block")
+					input(type="radio" name="RandomizeTestQuestions")
+					input(type="datetime-local" name="datetimeTest")
+					div(ng-repeat='question in questions'  class="question-block")
 						.form-group
 							.row
 								.callout.panel
