beginning of OOP

--- a/framework/views/backbone.jade
+++ b/framework/views/backbone.jade
@@ -6,7 +6,7 @@
 doctype html
 html(ng-app='ngAddApp', lang='en')
 	head.no-js
-		title= "eTest"
+		title= "XAMulator"
 		meta(charset='utf-8')
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 		link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/css/foundation.css')
@@ -20,6 +20,7 @@ html(ng-app='ngAddApp', lang='en')
 		script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/jquery.js')
 		script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/foundation.min.js')
 		script(src='http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML')
+		script(src='js/models.js')
 		script(src='js/questions.js')
 		script(src='js/button.js')
 		script(src='js/newtest.js')
