--- a/framework/views/layout.jade
+++ b/framework/views/layout.jade
@@ -26,15 +26,13 @@ block bodyContent
 					ul.left
 						li.active
 							a(href='/') Home
-						li
-							a(href='/newtest') Portal
 						li.divider
 						li.has-form
 							.row.collapse
 								.large-8.columns
 									input(type='text', placeholder='Search...' style='height:2.098rem')
 								.large-4.columns
-									a.alert.button.expand(href='#') Search
+									a.alert.button.expand(href='#' style='padding-bottom: .51rem;') Search
 		br
 		br
 
