--- a/framework/views/newtest.jade
+++ b/framework/views/newtest.jade
@@ -27,11 +27,9 @@ block rightBar
 		a.close-reveal-modal &times;
 
 br
-br
-br
 
 block pageContent
-	.row
+	.row (style='max-width:0')
 		.large-12.columns
 			h1.title Dashboard
 		br
