--- a/framework/public/css/custom.css
+++ b/framework/public/css/custom.css
@@ -1,10 +1,10 @@
 body {
 	background: #AAC3F0;
 	color: #eee;
-	font-family: 'Open Sans', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
+	font-family: 'PT Sans Narrow', sans-serif; }
 
 button, .button {
-	font-family: 'Open Sans', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
+	font-family: 'PT Sans Narrow', sans-serif; }
 	button.large, .button.large {
 		padding-top: 0.3rem;
 		padding-right: 1.2rem;
@@ -12,7 +12,7 @@ button, .button {
 		padding-left: 1.2rem; }
 
 .top-bar-section ul li > a {
-	font-family: 'Open Sans', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
+	font-family: 'PT Sans Narrow', sans-serif; }
 
 .panel {
 	margin-bottom: 0.5rem;
@@ -25,30 +25,30 @@ button, .button {
 
 /* Default header styles */
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Open Sans', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
+	font-family: 'PT Sans Narrow', sans-serif; }
 
 .tabs dd > a, .tabs .tab-title > a {
-	font-family: 'Open Sans', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
+	font-family: 'PT Sans Narrow', sans-serif; }
 
 .side-nav {
-	font-family: 'Open Sans', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
+	font-family: 'PT Sans Narrow', sans-serif; }
 	.side-nav li.active > a:first-child:not(.button) {
-		font-family: 'Open Sans', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
+		font-family: 'PT Sans Narrow', sans-serif; }
 
 .accordion .accordion-navigation > a, .accordion dd > a {
-	font-family: 'Open Sans', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
+	font-family: 'PT Sans Narrow', sans-serif; }
 
 .sub-nav li {
-	font-family: 'Open Sans', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
+	font-family: 'PT Sans Narrow', sans-serif; }
 
-.label {
-	font-family: 'Open Sans', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
+.lPT Sans Narrow {
+	font-family: 'PT Sans Narrow', sans-serif; }
 
 input[type="submit"] {
 	border-style: solid;
 	border-width: 0px;
 	cursor: pointer;
-	font-family: 'Open Sans', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+	font-family: 'PT Sans Narrow', sans-serif;
 	font-weight: normal;
 	line-height: normal;
 	margin: 0 0 1.25rem;
