--- a/framework/views/backbone.jade
+++ b/framework/views/backbone.jade
@@ -11,7 +11,7 @@ html(ng-app='ngAddApp', lang='en')
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 		link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/css/foundation.css')
 		link(rel='stylesheet', href='css/custom.css')
-		link(href='http://fonts.googleapis.com/css?family=Open+Sans:400,100,600', rel='stylesheet', type='text/css')
+		link(href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css')
 		link(rel='icon', type='image/png', href='/img/favicon.png')
 	body(ng-controller='MainCtrl')
 		block bodyContent
